# idalib-ts

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/workflows/: CI.yml
npm/darwin-arm64/: idalib-node.darwin-arm64.node  package.json
npm/darwin-x64/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: comment.rs  database.rs  error.rs  lib.rs
src/collections/: bookmarks.rs  bytes.rs  functions.rs  mod.rs  names.rs  segments.rs  strings.rs  xrefs.rs
src/types/: bookmark.rs  decompiler.rs  function.rs  instruction.rs  metadata.rs  mod.rs  name.rs  plugin.rs  segment.rs  string_entry.rs  xref.rs
